# crimedatasets-py

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  datasets.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ipynb  test.py
crime/: pyvenv.cfg
crime/Scripts/: activate  activate.bat
crimedatasets/: __init__.py  datasets.py
crimedatasets/data/: 2018_DOJ_arrests_by_Race.csv  2019_DOJ_crimes_by_Race.csv  History_of_Mass_Shootings_in_the_USA.csv  presidents_one.csv  presidents_two.csv  prisons_Spain_coordinates.csv  prisons_Sweden_coordinates.csv  recorded-crime.csv  russia_crimes_2008_2023.csv  serial_killers_by_victims.csv  world_corruption_index_2012_2022.csv
docs/: examples.md  index.md
examples/: basic_usage.py
tests/: test_core.py
