[metadata]
name = crimedatasets
version = 0.1.0
author = Renzo Caceres Rossi
author_email = arenzocaceresrossi@gmail.com
description = A curated collection of crime-related datasets for data analysis, criminology research, and education
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lightbluetitan/crimedatasets-py
project_urls =
    Bug Tracker = https://github.com/lightbluetitan/crimedatasets-py/issues
    Documentation = https://github.com/lightbluetitan/crimedatasets-py
    Source Code = https://github.com/lightbluetitan/crimedatasets-py
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Sociology
    Topic :: Database
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Natural Language :: English
keywords = datasets, crime, criminology, criminal justice, crime statistics, law enforcement, incarceration, hate crimes, mass shootings, prisons, data analysis, data science, research, sociology, international, kaggle

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=1.5
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
    docs*
    examples*

[options.package_data]
crimedatasets = data/*.csv

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov
    black
    flake8
    mypy
docs =
    mkdocs
    mkdocs-material

# Configuration for pytest
[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    --verbose
    --cov=crimedatasets
    --cov-report=html
    --cov-report=term

# Configuration for coverage
[coverage:run]
source = crimedatasets
omit =
    */tests/*
    */test_*.py
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:

# Configuration for flake8
[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    env,
    venv

# Configuration for mypy
[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False